--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         <div id="content">
             <div class="side-bar">
                 <h1>What is Git?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident praesentium harum, facilis ipsum cumque in nesciunt quaerat id, nihil quod impedit ratione sequi aperiam autem? Animi incidunt beatae aut adipisci.</p>
+                <p>Git is a version control system; you can think of it as a series of snapshots
+                    (Commits) of your code base.
+                    With the creation of each snapshot you build out a whole application, seeing the growth of a full app. During this time you can make branches to experiment and come back to a previous snapshots you took or merge those experiments into the your app.
+                    </p>
                 <h1>What is Github?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident praesentium harum, facilis ipsum cumque in nesciunt quaerat id, nihil quod impedit ratione sequi aperiam autem? Animi incidunt beatae aut adipisci.</p>
+                <p>Github is a code hosting platform for version and collaboration. It lets you and others work together on projects from anywhere using those code snapshots that you took during developments.</p>
             </div> <!-- side-bar -->
             <div id="main-content">
                 <div class="article small">
@@ -34,24 +37,24 @@
                         <p><a href="#">Git init</a> is Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident </p>
                 </div>
                 <div class="article small">
-                        <h1>Git init</h1>
-                        <p><a href="#">Git init</a> is Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident </p>
+                        <h1>Git add</h1>
+                        <p><a href="#">Git add</a> Git add is how we stage the integration of our current code base into your current list of snapshots.</p>
                 </div>
                 <div class="article small">
-                        <h1>Git init</h1>
-                        <p><a href="#">Git init</a> is Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident </p>
+                        <h1>Git status</h1>
+                        <p><a href="#">Git status</a> Git status allows us to see the changes we are going to make.</p>
                 </div>
                 <div class="article medium">
-                        <h1>Git init</h1>
-                        <p><a href="#">Git init</a> is Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident </p>
+                        <h1>Git commit</h1>
+                        <p><a href="#">Git commit</a> Git commit; finally we can commit those changes we added to our last snapshot giving us a new snapshot of our code with whatever new changes were made</p>
                 </div>
                 <div class="article medium">
-                        <h1>Git init</h1>
-                        <p><a href="#">Git init</a> is Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident </p>
+                        <h1>Git remote add</h1>
+                        <p><a href="#">Git remote add</a> Git remote add is used to set up a online repository where we can place all of our current code. This is where the outside world can see our code base.</p>
                 </div>
                 <div class="article long">
                         <h1>Git push</h1>
-                        <p><a href="#">Git init</a> is Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident </p>
+                        <p><a href="#">Git push</a> Git push is how we get our code to Github, an excellent place to store all of our repositories. Other developers might look at our existing projects to see how we approached problems, pull down our code and add new features or even update our code base with features they wanted to add</p>
                 </div>
             </div><!-- main-content -->
         </div> <!-- content -->
