Update Git logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="header">
             <div class="left">
-                <img src="github-icon.png" alt="Github Logo"> 
+                <img src="GitHub-Mark-64px.png" alt="Github Logo"> 
                 <h1>Git Basics</h1>
             </div>
             <div id="nav">
